@@ -6,7 +6,6 @@ import com.neil.typedtuples.util.TtObjects;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -59,9 +58,9 @@ public final class Tuple3<T1, T2, T3> extends GeneratedTuple3<T1, T2, T3> implem
   public static <S1, S2, S3> Tuple3<List<S1>, List<S2>, List<S3>> unzip(List<Tuple3<S1, S2, S3>> listOfTuples) {
     Objects.requireNonNull(listOfTuples, "Illegal null List argument");
 
-    var left = listOfTuples.stream().map(Tuple3::elem1).collect(Collectors.toList());
-    var middle = listOfTuples.stream().map(Tuple3::elem2).collect(Collectors.toList());
-    var right = listOfTuples.stream().map(Tuple3::elem3).collect(Collectors.toList());
+    var left = listOfTuples.stream().map(Tuple3::elem1).toList();
+    var middle = listOfTuples.stream().map(Tuple3::elem2).toList();
+    var right = listOfTuples.stream().map(Tuple3::elem3).toList();
     return Tuple3.of(left, middle, right);
   }
 
