@@ -6,7 +6,6 @@ import com.neil.typedtuples.util.TtObjects;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -62,12 +61,12 @@ public final class Tuple6<T1, T2, T3, T4, T5, T6> extends GeneratedTuple6<T1, T2
   public static <S1, S2, S3, S4, S5, S6> Tuple6<List<S1>, List<S2>, List<S3>, List<S4>, List<S5>, List<S6>> unzip(List<Tuple6<S1, S2, S3, S4, S5, S6>> listOfTuples) {
     Objects.requireNonNull(listOfTuples, "Illegal null List argument");
 
-    var l1 = listOfTuples.stream().map(Tuple6::elem1).collect(Collectors.toList());
-    var l2 = listOfTuples.stream().map(Tuple6::elem2).collect(Collectors.toList());
-    var l3 = listOfTuples.stream().map(Tuple6::elem3).collect(Collectors.toList());
-    var l4 = listOfTuples.stream().map(Tuple6::elem4).collect(Collectors.toList());
-    var l5 = listOfTuples.stream().map(Tuple6::elem5).collect(Collectors.toList());
-    var l6 = listOfTuples.stream().map(Tuple6::elem6).collect(Collectors.toList());
+    var l1 = listOfTuples.stream().map(Tuple6::elem1).toList();
+    var l2 = listOfTuples.stream().map(Tuple6::elem2).toList();
+    var l3 = listOfTuples.stream().map(Tuple6::elem3).toList();
+    var l4 = listOfTuples.stream().map(Tuple6::elem4).toList();
+    var l5 = listOfTuples.stream().map(Tuple6::elem5).toList();
+    var l6 = listOfTuples.stream().map(Tuple6::elem6).toList();
     return Tuple6.of(l1, l2, l3, l4, l5, l6);
   }
 
